--- a/api/client/package.json
+++ b/api/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
+    "braces": "^3.0.3",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
